# macpyver_github_source

./: .copier-answers.yml  README.md  pyproject.toml
.devcontainer/: .promptname  Dockerfile  devcontainer.json
.github/workflows/: _integration.yml
docs/source/: conf.py  index.rst
src/macpyver_github_source/: __init__.py  exceptions.py  github_source.py
