[tool.poetry]
name = "macpyver_github_source"
version = "1.0.0-dev"
description = "Version Source for GitHub support for MacPyVer"
authors = ["Daryl Stark <daryl@dstark.nl>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "macpyver_github_source", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
macpyver-core = "^1.0.0"
requests = "^2.31.0"
types-requests = "^2.31.0.20240106"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pycodestyle = "^2.11.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pydocstyle = "^6.3.0"
darglint2 = "^1.8.2"
autopep8 = "^2.0.2"
bumpver = "^2023.1126"
toml = "^0.10.2"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.2"
sphinxcontrib-mermaid = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "1.0.0-dev"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Version {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/macpyver_github_source/__init__.py" = ["{version}"]

[tool.pytest.ini_options]
addopts = ['--cov=macpyver_github_source', '--cov-report=html', '--cov-report=lcov']
